# coastal-crawler

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  20260615_95564679b92f_add_abstract_column_to_papers.py  20260615_95900fcda75f_add_discovered_from_column_to_papers.py  20260623_c3a1b2d4e5f6_add_filter_confidence_to_papers.py  20260624_d4e5f6a7b8c9_add_pdf_inaccessible_to_papers.py  20260624_e5f6a7b8c9d0_drop_pdf_inaccessible_column.py
scripts/: cluster.local.sh.example  database_summary.py  diagnose_inaccessible.py  recover_oa_inaccessible.py  serve_filter_model.sh  serve_model.sh  submit_extract_job.sh  submit_filter_job.sh  test_wiley_download.py  time_ocr.py  wait_for_health.sh
src/coastal_crawler/: __init__.py  adapter.py  cli.py  config.py  discovery.py  measurement_schema.py  pdf.py  relevance_filter.py  worker.py
src/coastal_crawler/db/: __init__.py  engine.py  models.py  store.py
src/coastal_crawler/extraction/: __init__.py  extraction_lm.py  ocr_lm.py  pdf_render.py
src/coastal_crawler/sources/: __init__.py  base.py  http.py  openalex.py  semantic_scholar.py  wiley.py
tests/: conftest.py  test_adapter.py  test_discovery.py  test_extraction.py  test_relevance_filter.py  test_store.py  test_worker.py
