[project]
name = "coastal-crawler"
version = "0.1.0"
description = "Discovery and extraction pipeline for coastal-ecosystem papers"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "alembic>=1.13",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.0",
    "scholarlm",
    "sqlalchemy>=2.0",
    "structlog>=24.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[project.scripts]
coastal-crawler = "coastal_crawler.cli:app"

[tool.uv.sources]
scholarlm = { path = "../scholarlm" }

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
